<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="welcome.MainActivity"
    android:background="@layout/gradient_home">

    <TextView
        android:id="@+id/textViewLogin"
        android:layout_width="288dp"
        android:layout_height="66dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="217dp"
        android:layout_height="34dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="28dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/username"
        app:layout_constraintTop_toBottomOf="@+id/imageViewUser" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="217dp"
        android:layout_height="34dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="28dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@+id/editTextUserName" />

    <ImageView
        android:id="@+id/imageViewUser"
        android:layout_width="109dp"
        android:layout_height="95dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="52dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogin"
        app:srcCompat="@mipmap/image_user" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="90dp"
        android:layout_height="78dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="44dp"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        app:srcCompat="@mipmap/image_log" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="80dp"
        android:layout_height="67dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="164dp"
        android:layout_marginTop="128dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        tools:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
