<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="homeProf.magazzino.inserimento.RichiestaMagazzinoFragment">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/anno"
        android:layout_width="104dp"
        android:layout_height="51dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="128dp"
        android:hint="anno"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputArticolo" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/mese"
        android:layout_width="59dp"
        android:layout_height="51dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="128dp"
        android:hint="mese"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputArticolo" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/giorno"
        android:layout_width="59dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="128dp"
        android:hint="giorno"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputArticolo" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputArticolo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="204dp"
        android:hint="Articolo del magazzino"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/InputQuantita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="276dp"
        android:hint="Quantità"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewStart"
        android:layout_width="411dp"
        android:layout_height="64dp"
        android:layout_marginTop="60dp"
        android:text="Completa i campi riportati di seguito "
        android:textAlignment="center"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewGiorno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="8dp"
        android:text="Giorno"
        app:layout_constraintBottom_toTopOf="@+id/giorno"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewMese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginBottom="8dp"
        android:text="Mese"
        app:layout_constraintBottom_toTopOf="@+id/mese"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewAnno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginBottom="8dp"
        android:text="Anno"
        app:layout_constraintBottom_toTopOf="@+id/anno"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonRichiestaMagazzino"
        android:layout_width="411dp"
        android:layout_height="70dp"
        android:layout_marginBottom="148dp"
        android:text="Invia la richiesta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>