...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/richiesta_magazzino_cuoco"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="25dp"
        android:text="Richiesta magazzino"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
...
